<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailAlamat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_close"
        app:title="Tambah Alamat" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tambah Alamat Baru"
                android:textSize="25sp"
                android:fontFamily="@font/poppins_bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_building"
                android:hint="Nama Alamat"
                app:helperText="contoh: Rumah, Kantor, dsb"
                style="@style/editTextBaseStyle" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailAlamat_namaAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_person"
                android:hint="Nama Penerima"
                app:helperText="contoh: Andi, Ayah"
                style="@style/editTextBaseStyle" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailAlamat_namaPenerima"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_call"
                android:hint="No. Telepon"
                app:prefixText="(+62) - "
                style="@style/editTextBaseStyle" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailAlamat_noTelp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_province"
                android:hint="Provinsi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/detailAlamat_provinsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_city"
                android:hint="Kabupaten/Kota"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/detailAlamat_kabupatenKota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_district"
                android:hint="Kecamatan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/detailAlamat_kecamatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_road"
                android:hint="Detail Alamat"
                app:helperText="Jalan dan nomor rumah"
                style="@style/editTextBaseStyle" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailAlamat_detailAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/detailAlamat_btnExecute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TAMBAH"
                android:fontFamily="@font/dmsans_regular" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>