...
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="10dp" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/daftarAlamat_rvInstanceAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/daftarAlamat_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        app:icon="@drawable/ic_add"
        android:text="@string/add"
...
