...
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>

    <string-array name="provinsi">
        <item>ACEH</item>
        <item>SUMATERA UTARA</item>
        <item>SUMATERA BARAT</item>
        <item>SUMATERA SELATAN</item>
        <item>RIAU</item>
        <item>KEPULAUAN RIAU</item>
        <item>JAMBI</item>
        <item>BENGKULU</item>
...
